syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr.v062;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types/v062";

message NFTSchemaByContract {
  string originContractAddress = 1; 
  repeated string schemaCodes = 2; 
  
}

